--- a/todo
+++ b/todo
@@ -1,24 +1,28 @@
 Core
 ====
-14 [?] (!) ID assigned to new TODOs must be the last ID + 1 not the count
+23 [ ] (!) Category regex match only the start, not whole word. Not reliable
+19 [x] (!) Visualization error creating new category
+17 [?] (H) Design new CLI where first argument is ID or category
+16 [ ] ( ) Move TODO in categories
+15 [x] (!) If more than 9999 TODOs, no output due to prettify bug
+14 [x] (!) ID assigned to new TODOs must be the last ID + 1 not the count
 11 [x] (L) Align output in columns. The id may be of several digits
-8 [ ] (L) Highlight must overwrite everything
-7 [ ] (H) Add feedback to user and check result
+8 [x] (L) Highlight must overwrite everything
+7 [?] (H) Add feedback to user and check result
 6 [ ] (H) Options support
 5 [ ] ( ) Delete a category
 4 [ ] (L) config file
-1 [ ] (H) Create TODO file if it doesnt exist
-
-Features
-========
 2 [ ] ( ) Edit TODO
+1 [x] (H) Create TODO file if it doesnt exist and check permissions
 
 Commit
 ======
+25 [ ] (H) Need reindexing
 3 [ ] (H) Create commit feature to build changelog file and clean TODO
 
 Sort
 ====
+20 [?] (!) Set filter params for search and hide
 9 [ ] (H) Order by priority
 10 [?] (H) Filter by priority or status
 
@@ -26,3 +30,10 @@ Multiuser
 =========
 13 [ ] ( ) Use timestamps, emails etc..
 12 [ ] ( ) Allow users to collaborate on the TODOs
+
+Docs
+====
+24 [ ] ( ) luca
+22 [ ] ( ) Print usage if empty file
+21 [ ] ( ) Usage message and help
+18 [ ] (!) README page for github
