--- a/todo
+++ b/todo
@@ -1,5 +1,6 @@
 Core
 ====
+27 [ ] (!) Use one list for all project subfolders
 23 [ ] (!) Category regex match only the start, not whole word. Not reliable
 19 [x] (!) Visualization error creating new category
 17 [?] (H) Design new CLI where first argument is ID or category
@@ -17,6 +18,7 @@ Core
 
 Commit
 ======
+26 [ ] (H) Bind to git pre commit hook
 25 [ ] (H) Need reindexing
 3 [ ] (H) Create commit feature to build changelog file and clean TODO
 
@@ -33,7 +35,6 @@ Multiuser
 
 Docs
 ====
-24 [ ] ( ) luca
 22 [ ] ( ) Print usage if empty file
 21 [ ] ( ) Usage message and help
-18 [ ] (!) README page for github
+18 [?] (!) README page for github
