--- a/todo
+++ b/todo
@@ -18,7 +18,7 @@ Core
 ====
 29 [x] (!) ID regex matches all numbers
 28 [x] (L) Comments on the head as help
-27 [ ] (!) Use one list for all project subfolders
+27 [x] (!) Use one list for all project subfolders
 23 [ ] (!) Category regex match only the start, not whole word. Not reliable
 19 [x] (!) Visualization error creating new category
 17 [?] (H) Design new CLI where first argument is ID or category
